<resources>
    <string name="app_name">Everything</string>
    <string name="welcome_to_use">欢迎使用百事通</string>
    <string name="everything">百事通</string>
    <string name="finish">完成</string>
    <string name="weather_forecast">天气预报</string>
    <string name="calendar">万年历</string>
    <string name="today">今天</string>
    <string name="sunrise">日出：</string>
    <string name="sunoff">日落：</string>
    <string name="wind_speed">风速：</string>
    <string name="humidity">湿度：</string>
    <string name="airCondition">空气质量：</string>
    <string name="exerciseIndex">晨练指数：</string>
    <string name="coldIndex">感冒指数：</string>
    <string name="dressingIndex">穿衣指南：</string>
    <string name="washIndex">洗衣指数：</string>
    <string name="pollutionIndex">污染指数：</string>
    <string name="express_search">快递查询</string>
    <string name="lottery_search">开奖查询</string>
    <string name="train_search">列车时刻表</string>
    <string name="cueerncy_exchange">货币汇率</string>
    <string name="choose_currency">选择币种</string>
    <string name="query">查询</string>
    <string name="please_choose_currency">请选择币种</string>
    <string name="userful_number">常用号码</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="manager_services">服务管理</string>
    <string name="share">分享</string>
    <string name="give_good_praise">给个好评</string>
</resources>
