<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B3F42"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:layout_width="250px"
        android:layout_height="250px"
        android:layout_marginTop="120px"
        android:src="@drawable/icon" />

    <RelativeLayout
        android:id="@+id/rl_service"
        style="@style/LeftMenu_Rl"
        android:layout_marginTop="40px">


        <ImageView
            android:id="@+id/img_menu"
            style="@style/LeftMenu_Image"
            android:src="@drawable/taocan" />

        <TextView
            style="@style/LeftMenu_TextView"
            android:layout_toRightOf="@id/img_menu"
            android:text="@string/manager_services" />
    </RelativeLayout>

    <View style="@style/LeftMenu_Line" />


    <RelativeLayout
        android:id="@+id/rl_share"
        style="@style/LeftMenu_Rl">


        <ImageView
            android:id="@+id/leftimg_share"
            style="@style/LeftMenu_Image"
            android:src="@drawable/share" />

        <TextView
            style="@style/LeftMenu_TextView"
            android:layout_toRightOf="@id/leftimg_share"
            android:text="@string/share" />
    </RelativeLayout>

    <View style="@style/LeftMenu_Line" />

    <RelativeLayout
        android:id="@+id/rl_praise"
        style="@style/LeftMenu_Rl">


        <ImageView
            android:id="@+id/leftimg_praise"
            style="@style/LeftMenu_Image"
            android:src="@drawable/praise" />

        <TextView
            style="@style/LeftMenu_TextView"
            android:layout_toRightOf="@id/leftimg_praise"
            android:text="@string/give_good_praise" />
    </RelativeLayout>

    <View style="@style/LeftMenu_Line" />


    <RelativeLayout
        android:id="@+id/rl_about"
        style="@style/LeftMenu_Rl">


        <ImageView
            android:id="@+id/img_about"
            style="@style/LeftMenu_Image"
            android:src="@drawable/about" />

        <TextView
            style="@style/LeftMenu_TextView"
            android:layout_toRightOf="@id/img_about"
            android:text="@string/about" />
    </RelativeLayout>

    <View style="@style/LeftMenu_Line" />


    <RelativeLayout
        android:id="@+id/rl_exit"
        style="@style/LeftMenu_Rl">


        <ImageView
            android:id="@+id/img_exit"
            style="@style/LeftMenu_Image"
            android:src="@drawable/exit" />

        <TextView
            style="@style/LeftMenu_TextView"
            android:layout_toRightOf="@id/img_exit"
            android:text="@string/exit" />
    </RelativeLayout>


</LinearLayout>